# missionary-meal-planner

./: .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  generate_pdf.py  local_storage.py  packages.txt  photo_processing.py  photo_section_app.py  photo_state.py  photo_upload.py  pyproject.toml  requirements.txt  state_model.py  streamlit_app.py  test_e2e_photo_section.py  test_e2e_streamlit_photo.py  test_generate_pdf.py  test_local_storage.py  test_photo_processing.py  test_photo_state.py  test_photo_upload.py  test_streamlit_app_integration.py  test_utils.py  utils.py
.cursor/rules/: global.mdc  streamlit_app.mdc
.github/workflows/: unit-tests.yml
components/: README.md  __init__.py  missionary_input.py
templates/: meal_planner.html
tests/: test_photo_upload.py
