[project]
name = "missionary-meal-planner"
version = "0.1.0"
description = "A Streamlit app for creating missionary meal planner images"
authors = [
    {name = "Missionary Meal Planner", email = "your-email@example.com"},
]

requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "weasyprint>=61.0",
    "pillow>=10.0.0",
    "jinja2>=3.1.0",
    "pdf2image>=1.17.0",
    "reportlab>=4.0.0",
    "pydantic>=2.11.9",
    "streamlit-js-eval>=0.1.7",
    "structlog>=25.4.0",
]

[project.scripts]
missionary-meal-planner = "streamlit_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
